src/styles/less/Admin/AdminHistory.less
.admin-history{
    overflow-y: scroll;

    .admin-history-title {
        margin: 1vh 1vw;
        font-size: 22px;
        font-weight: 600;
      }
    .admin-history-table {
        width: 100%;
        margin: 1vh 1vw;
        text-align: left;
         

        tr{
            margin-top: 1vh;  
        }
        th {
            text-align: left;
        }
        .admin-history-story-column{
            width:40%;
            margin-top: 1vh;

            .ant-card{
                width: 90%;
                margin-top: 1vh;
            }

            .ant-card-body{
                padding: 1vh;
            }

            .ant-card-meta-avatar{
                float:right;
            }

            .ant-card-meta-title{
                margin-bottom: 1vh;
            }
        }

      }
    
}

